Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10011

suppress annoying messages for lfs quota

XMLWordPrintable

    • 3
    • 9223372036854775807

      See following output:

          
          [wsl@w003 ~]$ lfs quota /lustre1
          Disk quotas for usr wsl (uid 14434):
                Filesystem  kbytes   quota   limit   grace   files   quota limit
          grace
                  /lustre1       0       0       0       -       0 0       0       -
          Disk quotas for grp se (gid 1000):
                Filesystem  kbytes   quota   limit   grace   files   quota limit
          grace
                  /lustre1   44028       0       0       -      40 0       0       -
          Unexpected quotactl error: Operation not supported
          Disk quotas for prj <unknown> (pid 0):
                Filesystem  kbytes   quota   limit   grace   files   quota limit
          grace
                  /lustre1     [0]     [0]     [0]       -     [0]     [0] [0]       -
          Some errors happened when getting quota info. Some devices may be not
          working or deactivated. The data in "[]" is inaccurate.
          
          Since project quota is disabled in default, unsupported project
          quota messages will be annoying here.
          
          Even Project quota is enabled, project id 0 will be outputed here,
          it dose not make much sense either, instead, lfs quota <mnt> will only
          output current user/group quota information in default.
      
      

            wangshilong Wang Shilong (Inactive)
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: