lustre/utils/lfs.c
@@ -4185,7 +4185,8 @@ all_output:
 			break;
 		default:
 			rc = -ENOTSUP;
-			break;
+			pass++;
+			goto out;
 		}
 		if (rc)
 			name = "<unknown>";
